# human-agent

./: .env.example  .gitignore  README.md  digital  my  pyproject.toml
docs/: 00_research_protocol.md  01_literature_matrix.md  01aa_prediction_active_inference_cross_chain_checker_plan.md  01ab_prediction_active_inference_dashboard_stage_gate_batch.md  01ac_prediction_active_inference_archive_receipt_batch.md  01ad_prediction_active_inference_gap_feedback_batch.md  01ae_prediction_active_inference_growth_feedback_patch.md  01af_prediction_active_inference_growth_archive_receipt_batch.md  01ag_prediction_active_inference_growth_shadow_run_plan.md  01ah_prediction_active_inference_runtime_mount_plan.md  01ai_prediction_active_inference_growth_post_shadow_validation.md  01aj_prediction_active_inference_limited_activation_report.md  01ak_prediction_active_inference_post_mount_observation_feedback.md  01al_prediction_active_inference_post_validation_archive_receipt.md  01am_prediction_active_inference_activation_consolidation_seed.md  01an_prediction_active_inference_observation_driven_repair_patch.md  01ao_prediction_active_inference_archive_repair_receipt_batch.md  01ap_prediction_active_inference_archive_replay_shadow_seed.md  01aq_prediction_active_inference_consolidation_next_feedback_seed.md  01ar_prediction_active_inference_second_replay_validation.md  01as_prediction_active_inference_next_cycle_patch_seed.md  01at_prediction_active_inference_longitudinal_cycle_audit.md  01au_prediction_active_inference_longitudinal_drift_repair.md  01b_extended_literature_matrix.md  (+293 more)
(+395 files in other folders)
